add： ① 基础框架； ② 画布：绘制画布、命中检测画布； ③ 属性栏、对齐选择按钮

--- a/AD/Client/Shared/MainLayout.razor
+++ b/AD/Client/Shared/MainLayout.razor
@@ -29,7 +29,7 @@
             </button>
 
             <!-- Github Link -->
-            <a class="top-link" href="https://github.com/wubing7755/AWComponent?" target="_blank">
+            <a class="top-link" href="https://github.com/wubing7755/AlignmentDemo" target="_blank">
                 <span class="link-icon"></span>
                 <span class="link-text">GitHub</span>
             </a>
