--- a/AD/Client/_Imports.razor
+++ b/AD/Client/_Imports.razor
@@ -8,6 +8,4 @@
 @using Microsoft.JSInterop
 @using AD.Client
 @using AD.Client.Shared
-@using SkiaSharp
-@using SkiaSharp.Views.Blazor
-@using AD.Shared.Primitives
+@using AD.RCL.Components
