--- a/AD.Client/Pages/Index.razor
+++ b/AD.Client/Pages/Index.razor
@@ -12,11 +12,7 @@
     <div class="diagram-pane">
         <Diagram />
     </div>
-    <div class="property-bar-pane">
+    <div class="property-bar-pane common-scrollbar">
         <PropertyBar />
     </div>
 </div>
-
-@code{
-
-}
