--- a/AD.RCL/Components/PropertyBar.razor
+++ b/AD.RCL/Components/PropertyBar.razor
@@ -17,6 +17,9 @@
                     case FloatPropValue fpv:
                         <FloatProp PropValue="fpv" />
                         break;
+                    case DoublePropValue dpv:
+                        <DoubleProp PropValue="dpv" />
+                        break;
                     case IntPropValue ipv:
                         <IntProp PropValue="ipv" />
                         break;
