--- a/AD.RCL/Components/FunctionBar.razor
+++ b/AD.RCL/Components/FunctionBar.razor
@@ -26,7 +26,9 @@
     private void Align(AlignType type)
     {
         var selection = PrimitiveService.GetSelection();
-        AlignExtensions.Align<Primitive>(selection, type);
-        StateHasChanged();
+        if (AlignExtensions.Align<Primitive>(selection, type))
+        {
+            StateHasChanged();
+        }
     }
 }
